@@ -1,3 +1,8 @@
+2012-11-23  Jakub Jelinek  <jakub@redhat.com>
+
+	PR sanitizer/55435
+	* c-c++-common/asan/attrib-1.c: New test.
+
 2012-11-22  Ian Bolton  <ian.bolton@arm.com>
 
 	* gcc.target/aarch64/builtin-bswap-1.c: New test.
